Restructure, simplify, and (hopefully) improve the descriptions of those changes that everyone with CVS write access may make.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -128,27 +128,29 @@ developer to follow the appropriate policies.</p>
 <p>The list of folks with write access to the repository can be found
 in the MAINTAINERS file in the GCC distribution.</p>
 
-<p>Also note that fixes for obvious typos in ChangeLog files, docs,
-web pages, comments and similar stuff need not be approved.  Just
-check in the fix and copy it to <code>gcc-patches</code>.  We don't
-want to get overly anal-retentive about checkin policies.</p>
-
 <p>When you have checked in a patch exactly as it has been approved,
 you do not need to tell that to people -- including the approver.
 People interested in when a particular patch is committed can check
 CVS or the <a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a>
 list.</p>
 
-<p>Everyone with CVS write access is free to
-<a href="codingconventions.html#upstream">import files maintained outside
-the tree from their official versions</a> without explicit write approval.
-</p>
+<h3>Free for all</h3>
 
-<p>Any maintainer with CVS write access may <a href="#branches">create
-and use a branch</a> for development, including outside the parts of
-the compiler they maintain, provided that changes on the branch have
-copyright assignments on file.  Merging such developments back to the
-mainline still needs approval in the usual way.</p>
+<p>The following changes can be made by everyone with CVS write access:</p>
+
+<p>Fixes for obvious typos in ChangeLog files, docs, web pages, comments
+and similar stuff.  Just check in the fix and copy it to
+<code>gcc-patches</code>.  We don't want to get overly anal-retentive
+about checkin policies.</p>
+
+<p><a href="codingconventions.html#upstream">Importing files maintained
+outside the tree from their official versions</a>.</p>
+
+<p><a href="#branches">Creating and using a branch</a> for development,
+including outside the parts of the compiler one maintains, provided that
+changes on the branch have copyright assignments on file.  Merging such
+developments back to the mainline still needs approval in the usual way.</p>
+
 
 <hr />
 <h2><a name="testing">Testing changes</a></h2>
