--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -94,7 +94,7 @@ mmix     | HM  Q   C    q  p   b  a e
 mn10300  | ??             c  g       s
 ns32k    |  M?            c f m     e 
 pa       |   ? Q   CBD  qr    m d a e 
-pdp11    |    L   I      rcpf m     e 
+pdp11    |    L   I       cpf m     e 
 rs6000   |     Q   C    qr      d a   
 s390     |   ? Q        qr p g bdha e 
 sh       |     Q   CB   qr      dha   
