* fortran/librarystatus.html: Shorten long headings.

--- a/htdocs/fortran/librarystatus.html
+++ b/htdocs/fortran/librarystatus.html
@@ -8,14 +8,11 @@
 
 <h2>Contents</h2>
 
-<p><a href="#io">IO Library Status</a><br />
-<a href="#intrinsic">Implementation status of intrinsic functions and subroutines</a></p>
+<p><a href="#io">IO Library</a><br />
+<a href="#intrinsic">Intrinsic functions and subroutines</a></p>
 
 
 <h2><a name="io">IO Library Status</a></h2>
-
-<p>Everything breaks if the libgfor main(0 startup library is not used. This
-should be fairly easy to fix using constructor functions.</p>
 
 <p>Some formatted IO of integers.  The current implementation will silently 
 ignore many IO commands.</p>
@@ -26,7 +23,7 @@ allows threaded IO.</p>
 <p><em>TODO: Figure out what the IO library can really do</em></p>
 
 
-<h2><a name="intrinsic">Implementation status of intrinsic functions and subroutines</a></h2>
+<h2><a name="intrinsic">Intrinsic functions and subroutines</a></h2>
 
 
 <p>Some intrinsics map directly to library functions, and in most
