--- a/htdocs/projects/cfg.html
+++ b/htdocs/projects/cfg.html
@@ -112,7 +112,7 @@ code layout is an NP complete problem, allowing a limited amount of
 duplication should eliminate the common drawbacks of current
 algorithms and keep code size under control.  The purpose of this pass
 is to minimize the number of branches and cache misses.  It uses code
-duplication to avoid jumps.  An trivial example is copying the return
+duplication to avoid jumps.  A trivial example is copying the return
 instruction instead of jumping to it.  See <a href="#6">[6]</a> for a
 detailed description.</p>
 
@@ -195,7 +195,7 @@ are: <code>(a || b)</code> can be converted to <code>(a | b)</code>,
 <h4>Implementation in GCC</h4>
 
 <p>This is implemented as part of the if-conversion pass.  It
-basicalls find the patterns of two jumps in the CFG that can be
+basically finds the patterns of two jumps in the CFG that can be
 combined and then attempts to to apply several simplifications.
 Profile data is used to control the amount of optimizations.</p>
 
