--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -300,7 +300,7 @@ existing DejaGNU testing framework.</p>
 <h2><a name="todo">TODO list</a></h2>
 
 <p>This is a loosely organized list of unimplemented features,
-possible improvemend, and planned analyses and optimizations.
+possible improvement, and planned analyses and optimizations.
 Suggestions for other passes and volunteers to help finish the
 different passes are welcome.</p>
 
