Mention addition of m32r-linux target.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -421,9 +421,11 @@
     <li>Further small performance improvements.</li>
   </ul>
 
-<h4>M32</h4>
+<h4>M32R</h4>
   <ul>
     <li>Support for the M32R/2 processor has been added by Renesas.</li>
+    <li>Support for an M32R Linux target and PIC code generation has
+        been added by Renesas.</li>
   </ul>
 
 <h4>M68000</h4>
