--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -38,6 +38,46 @@
     <li>The configure option <code>--enable-threads=pthreads</code> has
         been removed; use <code>--enable-threads=posix</code> instead,
         which should have the same effect.</li>
+    <li>Code size estimates used by inlining heuristics for C, Objective-C, C++
+        and Java have been redesigned significantly.  As a result the parameters
+	of <code>-finline-insns</code>,
+	<code>--param max-inline-insns-single</code>
+	and <code>--param max-inline-insns-auto</code> need to be
+	reconsidered.</li>
+    <li><code>--param max-inline-slope</code>
+        and <code>--param min-inline-insns</code>
+        have been removed; they are not needed for the new bottom-up inlining 
+        heuristics.</li>
+    <li>The new unit-at-a-time compilation scheme has several compatibility
+    issues:
+    <ul>
+      <li>The order in which functions, variables, and top-level
+	  <code>asm</code> statements are emitted may have changed.  Code
+	  relying on some particular ordering needs to be updated.  The
+	  majority of such top-level asm statements can be replaced by section
+	  attributes.</li>
+      <li>Unreferenced static variables and functions are removed.
+	  This may result in undefined references when an <code>asm</code>
+	  statement directly refers to the variable/function directly.  In that
+	  case either the variable/function shall be listed in asm statement
+	  operand or in the case of top-level asm statements the attribute
+	  <code>used</code> shall be used to force function/variable to be
+	  always output and considered as a possibly used by unknown code.
+
+	  <p>For variables the attribute is accepted only by GCC 3.4 and newer,
+	  while for earlier versions it is sufficient to use
+	  <code>unused</code> to silence warnings about the variables not being
+	  referenced.  
+	  To keep code portable across different GCC versions, you can use
+	  appropriate preprocessor conditionals.</p></li>
+      <li>Static functions now can use non-standard passing conventions that may
+	  break <code>asm</code> statements calling functions directly.  Again
+	  the attribute <code>used</code> shall be used to prevent this
+	  behavior.</li>
+    </ul>
+    As a temporary workaround, <code>-fno-unit-at-a-time</code> can be used,
+    but this scheme may not be supported by future relases of GCC.
+    </li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
@@ -54,12 +94,48 @@
       <li>Coverage file format has been redesigned.</li>
       <li><code>gcov</code> coverage tool has been improved.</li>
       <li><code>make profiledbootstrap</code> available to build a faster
-          compiler.</li>
+          compiler.
+	  
+	  <p>Experiments made on i386 hardware showed an 11% speedup on
+	  <code>-O0<code> and a 7.5% speedup on <code>-O2</code> compilation of
+	  <a href="http://gcc.gnu.org/bugzilla/show_bug.cgi?id=8361">large C++
+	  testcase.</a></p></li>
+      <li>New value profiling pass enabled via
+          <code>-fprofile-values</code></li>
+      <li>New value profile transformations pass enabled via <code>-fvpt</code>
+	  aimes to optimize some code sequences by exploiting knowledge about
+	  value ranges or other properties of the operands.  At the moment a
+	  conversion of expensive divisions into cheaper operations has been
+	  implemented.</li>
+      <li>New <code>-fprofile-generate</code> and <code>-fprofile-use</code>
+          command line options to simplify the use of profile feedback.</li>
     </ul>
     </li>
-    <li>Inlining heuristics for C, Objective-C, C++ and Java have been
-        improved significantly.  Call graph based out-of-order inlining
-        is now enabled by default at <code>-O2</code>.</li>
+    <li>A new unit-at-a-time compilation scheme for C, Objective-C, C++ and
+	Java which is enabled via <code>-funit-at-a-time</code> (and implied by
+	</code>-O2</code>).  In this scheme whole file is parsed first and
+	optimized later.  The following basic inter-procedural optimizations
+	are implemented:
+    <ul>
+      <li>Removal of unreachable functions and variables</li>
+      <li>Discovery of local functions (functions with static linkage whose
+          address is never taken)</li>
+      <li>On i386, these local functions use register parameter passing
+          conventions.</li>
+      <li>Reordering of functions in topological order of the call graph to
+	  enable better propagation of optimizing hints (such as stack
+	  alignment needed by function) in the back end.</li>
+      <li>Call graph based out-of-order inlining heuristics which allows to
+	  limit overall compilation unit growth (<code>--param
+	  inline-unit-growth</code>).</li>
+    </ul>
+      Overall, unit-at-a-time scheme cause 1.3% improvement for SPECint2000
+      benchmark on i386 architecture (AMD Athlon CPU).
+    </li>
+    <li>More realistic code size estimates used by inlining for C, Objective-C,
+        C++ and Java.  The growth of large functions can now be limited via
+	<code>--param large-function-insns</code>
+	and </code>--param large-function-growth</code>.</li>
   </ul>
 
   
