One extra typo.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -135,7 +135,7 @@
     <li>More realistic code size estimates used by inlining for C, Objective-C,
         C++ and Java.  The growth of large functions can now be limited via
 	<code>--param large-function-insns</code>
-	and </code>--param large-function-growth</code>.</li>
+	and <code>--param large-function-growth</code>.</li>
   </ul>
 
   
