--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-01-05.
+2004-01-06.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -36,6 +36,7 @@ differences are currently required.</p>
 <tr> <td>gnu.java.awt.peer.gtk.GtkFramePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkFramePeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkListPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkListPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkPanelPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkPanelPeer.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkScrollPanePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkScrollPanePeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkScrollbarPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkScrollbarPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkTextComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkTextComponentPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
@@ -52,10 +53,12 @@ differences are currently required.</p>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkRadioButtonUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkSliderUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.SliderTest</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.awt.Choice</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Choice.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Container</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.Dialog</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Dialog.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.FileDialog</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.FileDialog.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Font</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Font.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.geom.CubicCurve2D</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.geom.CubicCurve2D.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.geom.QuadCurve2D</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.geom.QuadCurve2D.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.ScrollPane</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.ScrollPane.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.image.PixelGrabber</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td>java.io.FileDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -70,7 +73,6 @@ differences are currently required.</p>
 <tr> <td>java.lang.EcosProcess</td> <td>Yes</td> <td>GCJ-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.Float</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Float.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Object</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.lang.Package</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Package.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.PosixProcess</td> <td>Yes</td> <td>GCJ-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.Runtime</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Runtime.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.SecurityManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.SecurityManager.diff">Diff</a></td> </tr>
@@ -123,6 +125,7 @@ differences are currently required.</p>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.ORB</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>javax.swing.event.EventListenerList</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.event.EventListenerList.diff">Diff</a></td> </tr>
 <tr> <td>javax.xml.parsers.ClassStuff</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilderFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
