Fix broken link to g77 by simply avoiding it.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -423,7 +423,7 @@ names.
         intrinsics.
       </li>
       <li>
-        Test suite of <a href="../index">g77</a>.
+        The g77 testsuite (which is part of GCC).
       </li>
       <li>
         Test suite of
