Fix typo found by checker.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -518,7 +518,7 @@
     <li>Vector MMX and SSE operands are now passed in registers to improve
 	performance and match the argument passing convention used by the Intel 
 	C++ Compiler.  As a result it is not possible to call functions
-	accepting vector arguments compiled by older GCC version.<li>
+	accepting vector arguments compiled by older GCC version.</li>
     <li>Conditional jump elimination is now more aggressive on modern CPUs.</li>
     <li>The Athlon ports has been converted to use the DFA
         processor pipeline description.</li>
