Add changes for IA-64.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -531,6 +531,26 @@
     <li><code>-mcpu</code> has been renamed to <code>-mtune</code>.</li>
   </ul>
 
+<h4>IA-64</h4>
+  <ul>
+    <li>Tuning code for the Itanium 2 processor has been added.  The
+        generation of code tuned for Itanium 2 (option
+        <code>-mtune=itanium2</code>) is enabled by default now.  To
+        generate code tuned for Itanium 1 the option
+        <code>-mtune=itanium1</code> should be used.</li>
+    
+    <li><a
+        href="http://gcc.gnu.org/onlinedocs/gccint/Processor-pipeline-description.html">DFA
+        processor pipeline descriptions</a> for the IA-64 processors
+        have been added.  This resulted in about 3% improvement on the
+        SPECInt2000 benchmark for Itanium 2.</li>
+
+    <li>Instruction bundling for the IA-64 processors has been
+        rewritten using the DFA pipeline hazard recognizer.  It
+        resulted in about 60% compiler speedup on the SPECInt2000 C
+        programs.</li>
+  </ul>
+
 <h4>M32R</h4>
   <ul>
     <li>Support for the M32R/2 processor has been added by Renesas.</li>
