--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -459,6 +459,12 @@
     built-in functions</a> have been added such as
     <code>__builtin_alpha_zap</code> to allow utilizing the more
     obscure instructions of the CPU.</li>
+
+    <li>Parameter passing of complex arguments has changed to match the
+    <a href="http://h30097.www3.hp.com/docs/base_doc/DOCUMENTATION/V51A_HTML/ARH9MBTE/DTMNPLTN.HTM#normal-argument-list-structure">
+    ABI</a>.  This change is incompatible with previous GCC versions, but
+    does fix compatibility with the Tru64 compiler and several corner cases
+    where GCC was incompatible with itself.</li>
   </ul>
 
 <h4>ARM</h4>
