Update ARM and Tru64 UNIX object file format URLs.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -75,7 +75,7 @@ names.
  <li>arm (armv2, thumb)
   <br />Manufacturer: Various, by licence from ARM
   <br />CPUs include: ARM7 and ARM7T series (eg. ARM7TDMI), ARM9 and StrongARM
-  <br /><a href="http://www.arm.com/Documentation/">ARM Documentation</a>
+  <br /><a href="http://www.arm.com/documentation/">ARM Documentation</a>
  </li>
  
  <li>AVR
@@ -564,9 +564,8 @@ names.
   <li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively
   Scalar Compiler Project</a></li>
 
-  <li><a href="http://tru64unix.compaq.com/faqs/publications/base_doc/DOCUMENTATION/V51_HTML/SUPPDOCS/OBJSPEC/TITLE.HTM">
+  <li><a href="http://www.tru64unix.compaq.com/docs/base_doc/DOCUMENTATION/V51_HTML/SUPPDOCS/OBJSPEC/TITLE.HTM">
   Information on the Digital UNIX/Compaq Tru64 UNIX object file format</a></li>
-
 </ul><ul>
 
   <li><a href="http://www.almaden.ibm.com/journal/">IBM Journal of Research and Development</a></li>
