Reactivate documentation on our read-only respository with some updates (:ext: instead of :pserver: CVS access and savannah.gnu.org instead of subversions.gnu.org).  Slightly compress the intro on CVS.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -28,16 +28,13 @@ is in our repository or our <a href="#wwwdocs">web pages</a>.</p>
 
 <h2>Using the CVS repository</h2>
 
-<!--
-
-<p>Assuming you have <a href="http://www.cvshome.org/">CVS</a> installed on
-your machine you can check out the GCC sources with the following sequence
-of commands:</p>
+<p>Assuming you have <a href="http://www.cvshome.org/">CVS</a> installed,
+you can check out the GCC sources as follows:</p>
 
 <p>Set CVSROOT in your environment to
-<code>:pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</code>.
+<code>:ext:anoncvs@savannah.gnu.org:/cvsroot/gcc</code>.
 Alternately add
-<code>-d :pserver:anoncvs@subversions.gnu.org:/cvsroot/gcc</code>
+<code>-d :ext:anoncvs@savannah.gnu.org:/cvsroot/gcc</code>
 in the CVS commands below (place it immediately after <code>cvs</code>,
 before any other arguments).</p>
 
@@ -52,15 +49,9 @@ to check out the compiler sources, respectively
 
 <p>See the CVS documentation for additional information.</p>
 
-<p>In case of problems with the repository at subversions.gnu.org please
+<p>In case of problems with the repository at savannah.gnu.org please
 contact savannah-hackers@gnu.org.</p>
 
--->
-
-<p>The CVS server of the GNU project that used to provide anonymous access
-to our sources was hacked, so we currently do not offer anonymous access.
-(Note that our CVS repository for developers resides on a completely
-different server which was not compromised.)</p>
 
 <h3><a name="generated_files"></a>Generated files</h3>
 
