* done.html: Added Rimfaxe, JGachine, and pdftk.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -199,6 +199,56 @@ rneled%2fGtk2">Screenshots</a> are here.
       </tr>
 
       <!-- End Freestyler -->
+
+      <!-- Rimfaxe -->
+      <tr valign="top">
+        <td><b><a href="http://www.rimfaxe.com/rws/rws.jsp">Rimfaxe
+        Web Server</a></b></td>
+
+	<td>Rimfaxe is a web server featuring compilation of jsp pages
+	to .so libraries with gcj, SEDA-based architecture with
+	non-blocking I/O, servlet 2.3 / JSP 1.2 implementation
+	including filters and taglibs, and caching of static content.
+	</td>
+
+	<td><a href="mailto:lars@rimfaxe.com">Lars Andersen</a></td>
+      </tr>
+      <!-- End Rimfaxe -->
+
+      <!-- JGachine -->
+      <tr valign="top">
+        <td><b><a href="http://jgachine.berlios.de">JGachine</a></b></td>
+
+	<td>JGachine is a networked game engine for 2D multi-player
+	  (networked) games. JGachine is written in Java and C++. The
+	  games themselves are written in pure Java and can be loaded
+	  via network.
+	</td>
+
+	<td><a href="mailto:karme@berlios.de">Jens Thiele</a></td>
+      </tr>
+      <!-- End JGachine -->
+
+      <!-- pdftk -->
+      <tr valign="top">
+        <td><b><a href="http://www.accesspdf.com/pdftk">pdftk</a></b></td>
+
+	<td>If PDF is electronic paper, then pdftk is an electronic
+	  staple-remover, hole-punch, binder, secret-decoder-ring, and
+	  X-Ray-glasses. Pdftk is a useful tool for handling PDF
+	  documents. Every PDF user should have one in the top drawer
+	  of his/her desktop.
+	  <p>
+	    Pdftk is also an example of how to use a library of Java
+	    classes in a stand-alone C++ program. Specifically, it
+	    demonstrates how GCJ and CNI allows C++ code to use
+	    iText's (itext-paulo) Java classes.
+	</td>
+
+	<td><a href="mailto:ssteward@accesspdf.com">Sid Steward</a></td>
+      </tr>
+      <!-- End pdftk -->
+
       </table>
 
 </body>
