* done.html: HTML correctness fix.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -233,16 +233,16 @@ rneled%2fGtk2">Screenshots</a> are here.
       <tr valign="top">
         <td><b><a href="http://www.accesspdf.com/pdftk">pdftk</a></b></td>
 
-	<td>If PDF is electronic paper, then pdftk is an electronic
+	<td><p>If PDF is electronic paper, then pdftk is an electronic
 	  staple-remover, hole-punch, binder, secret-decoder-ring, and
 	  X-Ray-glasses. Pdftk is a useful tool for handling PDF
 	  documents. Every PDF user should have one in the top drawer
-	  of his/her desktop.
-	  <p>
-	    Pdftk is also an example of how to use a library of Java
+	  of his/her desktop.</p>
+
+	    <p>Pdftk is also an example of how to use a library of Java
 	    classes in a stand-alone C++ program. Specifically, it
 	    demonstrates how GCJ and CNI allows C++ code to use
-	    iText's (itext-paulo) Java classes.
+	    iText's (itext-paulo) Java classes.</p>
 	</td>
 
 	<td><a href="mailto:ssteward@accesspdf.com">Sid Steward</a></td>
