cvs login is no longer necessary on our read-only repository on savannah. Further compress instructions a bit and remove Germanism.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -35,19 +35,13 @@ you can check out the GCC sources as follows:</p>
 <code>:ext:anoncvs@savannah.gnu.org:/cvsroot/gcc</code>.
 Alternately add
 <code>-d :ext:anoncvs@savannah.gnu.org:/cvsroot/gcc</code>
-in the CVS commands below (place it immediately after <code>cvs</code>,
-before any other arguments).</p>
-
-<p>Issue the command <code>cvs login</code>.  You will be prompted for
-a password; reply with the empty string.</p>
+immediately after <code>cvs</code> in the commands below.</p>
 
 <p>Issue the command </p>
 <blockquote><p><code>cvs -z 9 co -P gcc</code></p></blockquote>
-to check out the compiler sources, respectively
+to check out the compiler sources, and
 <blockquote><p><code>cvs -z 9 co -P wwwdocs</code></p></blockquote>
-<p>to check out our web pages.</p>
-
-<p>See the CVS documentation for additional information.</p>
+<p>to check out our web pages, respectively.</p>
 
 <p>In case of problems with the repository at savannah.gnu.org please
 contact savannah-hackers@gnu.org.</p>
