--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-01-08.
+2004-01-09.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -27,6 +27,7 @@ differences are currently required.</p>
 <tr> <td>gnu.java.awt.peer.GLightweightPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.GLightweightPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkChoicePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkChoicePeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkEmbeddedWindowPeer</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>gnu.java.awt.peer.gtk.GtkFileDialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkFileDialogPeer.diff">Diff</a></td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkBorders</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -36,6 +37,7 @@ differences are currently required.</p>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkSliderUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.SliderTest</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Container</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.Dialog</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Dialog.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Font</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Font.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.image.PixelGrabber</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
